--- a/css/style.css
+++ b/css/style.css
@@ -5,111 +5,72 @@ body {
 }
 
 
-.container1{
-  background: rgba(255,255,255, .3);
+.container1 {
+  background-color: #23235b;
+  box-shadow: 0px 2px 10px rgba(255, 255, 255, 0.2);
   padding: 20px;
+  width: 55vw;
+  max-width: 100%;
+  color: white;
+}
+
+.result-container {
+  background-color: rgba(0, 0, 0, 0.4);
   display: flex;
-  flex-direction: column;
-  border-radius: 5px;
-  box-shadow: 0 10px 10px rgba(0,0,0,.3);
-  margin: 5px;
-}
-
-.calculator {
-  background-color: #f2f2f2;
-  padding: 20px;
-  max-width: 400px;
-  margin: 0 auto;
-  border: solid 1px #ccc;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-  border-radius: 5px;
-  margin-top: 40px;
-}
-
-#result{
-    width: 100%;
-    padding: 10px;
-    font-size: 24px;
-    border: none;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3) inset;
-    border-radius: 5px;
-}
-
-.buttons{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
-    margin-top: 20px;
-}
-
-button{
-    padding: 10px;
-    font-size: 24px;
-    border: none;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-
-}
-
-button:hover{
-    background-color: #ddd;
-}
-
-.clear{
-    background-color: #ff4136;
-    color: #fff;
-}
-
-.number, .decimal{
-    background-color: #fff;
-    color: #333;
-
-}
-
-.operator{
-    background-color: #0074d9;
-    color: #fff;
-}
-
-.equals{
-    background-color: #01ff70;
-    grid-row: span 3;
-    color: #fff;
-}
-.heading{
-  font-size: 30px;
-  text-align: center;
-}
-
-.input{
-  padding: 10px 20px;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
   font-size: 18px;
-  background: rgba(255,255,255, .4);
-  border-color: rgba(255,255,255, .5);
-  margin: 10px;
+  letter-spacing: 1px;
+  padding: 12px 10px;
+  height: 50px;
+  width: 100%;
 }
 
-.btn{
-  background-color: lightgreen;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  margin: 10px;
+.result-container #result {
+  word-wrap: break-word;
+  max-width: calc(100% - 40px);
+}
+
+.result-container .btn {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  width: 40px;
+  height: 40px;
   font-size: 20px;
-  box-shadow: 0 0 4px rgba(0,0,0,.3);
+}
+
+.btn {
+  background-color: #3b3b98;
+  color: #fff;
+  border: none;
+  font-size: 16px;
+  padding: 8px 12px;
   cursor: pointer;
 }
 
-.btn:hover{
-  box-shadow: 0 0 8px rgba(0,0,0,.3);
-  transition: all 300ms ease;
+.btn-large {
+  display: block;
+  width: 100%;
 }
 
-.info-text{
-  font-size: 20px;
-  font-weight: 500;
+.setting {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 15px 0;
+}
+
+.toast {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  background-color: #fff;
+  color: #3b3b98;
+  border-radius: 5px;
+  padding: 1rem 2rem;
+  margin: 0.5rem;
 }
 
 
